--- a/index.html
+++ b/index.html
@@ -2,55 +2,79 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>晚餐推薦小幫手 v2</title>
+  <title>晚餐推薦小幫手 v3</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * { box-sizing: border-box; }
     body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f7f7f7;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      background-color: #f2f2f7;
       margin: 0;
       padding: 0;
     }
     .container {
-      max-width: 450px;
+      max-width: 460px;
       margin: auto;
       padding: 20px;
     }
     h1 {
       text-align: center;
-      color: #4A90E2;
+      color: #007aff;
+      margin-bottom: 20px;
+    }
+    .card {
+      background-color: #ffffff;
+      border-radius: 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      padding: 20px;
+      margin-bottom: 30px;
     }
     .section-title {
-      background-color: #e0e0e0;
-      padding: 10px;
-      margin-top: 40px;
       font-size: 20px;
-      text-align: center;
-      border-radius: 10px;
+      font-weight: 600;
+      margin-bottom: 10px;
+      color: #333;
     }
     select, button {
-      padding: 10px;
-      font-size: 16px;
-      margin: 10px 0;
       width: 100%;
-      border-radius: 8px;
+      padding: 12px;
+      font-size: 16px;
+      margin-top: 10px;
+      border-radius: 12px;
       border: 1px solid #ccc;
     }
     button {
-      background-color: #4A90E2;
+      background-color: #007aff;
       color: white;
+      border: none;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .checkbox-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .checkbox-group label {
+      background-color: #f0f0f0;
+      padding: 6px 12px;
+      border-radius: 10px;
+      font-size: 14px;
       cursor: pointer;
     }
+    input[type="checkbox"] {
+      margin-right: 5px;
+    }
     .result, .slot-result {
-      margin-top: 20px;
+      margin-top: 15px;
       text-align: center;
       font-size: 18px;
     }
     a.link {
       display: block;
       margin-top: 8px;
-      color: #4A90E2;
+      color: #007aff;
       text-decoration: none;
       font-size: 14px;
     }
@@ -58,8 +82,8 @@
       height: 40px;
       overflow: hidden;
       background-color: #fff;
-      border: 2px dashed #aaa;
-      border-radius: 8px;
+      border: 2px dashed #ccc;
+      border-radius: 12px;
       font-size: 24px;
       font-weight: bold;
       text-align: center;
@@ -69,103 +93,91 @@
   </style>
 </head>
 <body>
-<div class="container">
-  <h1>晚餐推薦小幫手</h1>
+  <div class="container">
+    <h1>晚餐推薦小幫手</h1>
+    <div class="card">
+      <div class="section-title">🔍 按類型推薦</div>
+      <label for="cuisine">選擇料理類型：</label>
+      <select id="cuisine">
+        <option value="中餐">中餐</option>
+        <option value="西餐">西餐</option>
+        <option value="日式">日式</option>
+        <option value="韓式">韓式</option>
+        <option value="泰式">泰式</option>
+        <option value="甜點">甜點</option>
+        <option value="小吃">小吃</option>
+        <option value="速食">速食</option>
+      </select>
+      <div class="section-title" style="margin-top:20px;">❌ 不想吃的：</div>
+      <div class="checkbox-group" id="filters">
+        <label><input type="checkbox" value="牛">牛</label>
+        <label><input type="checkbox" value="辣">辣</label>
+        <label><input type="checkbox" value="炸">炸</label>
+        <label><input type="checkbox" value="甜">甜</label>
+        <label><input type="checkbox" value="魚">魚</label>
+        <label><input type="checkbox" value="生">生</label>
+      </div>
+      <button onclick="recommendByCategory()">推薦餐點</button>
+      <div class="result" id="category-result"></div>
+    </div>
 
-  <!-- 類型推薦 -->
-  <div class="section-title">🔍 按類型推薦</div>
-  <p>選擇料理類型：</p>
-  <select id="cuisine">
-    <option value="中餐">中餐</option>
-    <option value="西餐">西餐</option>
-    <option value="日式">日式</option>
-    <option value="韓式">韓式</option>
-    <option value="泰式">泰式</option>
-    <option value="甜點">甜點</option>
-    <option value="小吃">小吃</option>
-    <option value="速食">速食</option>
-  </select>
-  <button onclick="recommendByCategory()">推薦餐點</button>
-  <div class="result" id="category-result"></div>
+    <div class="card">
+      <div class="section-title">🌀 吃角子老虎機推薦</div>
+      <button onclick="startSlot()">開始轉動</button>
+      <button onclick="stopSlot()">停止</button>
+      <div class="slot-box" id="slot-box">🍝🍿🍜</div>
+      <div class="slot-result" id="slot-result"></div>
+    </div>
+  </div>
 
-  <!-- 老虎機 -->
-  <div class="section-title">🎰 吃角子老虎機推薦</div>
-  <button onclick="startSlot()">開始轉動</button>
-  <button onclick="stopSlot()">停止</button>
-  <div class="slot-box" id="slot-box">🍱🍝🍜</div>
-  <div class="slot-result" id="slot-result"></div>
-</div>
+  <audio id="ding" src="https://freesound.org/data/previews/341/341695_3248244-lq.mp3"></audio>
 
-<!-- 音效 -->
-<audio id="ding" src="https://freesound.org/data/previews/341/341695_3248244-lq.mp3"></audio>
+  <script>
+    const filters = () => Array.from(document.querySelectorAll('#filters input:checked')).map(cb => cb.value);
 
-<script>
-  const categoryData = {
-    "中餐": ["三杯雞", "宮保雞丁", "紅燒牛肉麵", "滷肉飯", "炒米粉"],
-    "西餐": ["牛排", "焗烤馬鈴薯", "義大利麵", "奶油燉飯", "起司漢堡"],
-    "日式": ["拉麵", "壽司", "咖哩飯", "炸豬排", "親子丼"],
-    "韓式": ["石鍋拌飯", "韓式炸雞", "部隊鍋", "泡菜炒飯", "辣炒年糕"],
-    "泰式": ["打拋豬", "綠咖哩", "月亮蝦餅", "泰式酸辣湯", "椰汁雞肉飯"],
-    "甜點": ["珍珠奶茶", "抹茶蛋糕", "芋泥球", "冰淇淋鬆餅", "千層蛋糕"],
-    "小吃": ["鹽酥雞", "蚵仔煎", "大腸麵線", "米血", "臭豆腐"],
-    "速食": ["麥當勞", "肯德基", "漢堡王", "摩斯漢堡", "頂呱呱"]
-  };
+    const categoryData = {
+      "中餐": ["宮保雞丁", "紅燒牛肉麵", "湯捲", "糖醇裡肉", "番茄炒蛋"],
+      "西餐": ["牛排", "義大利麵", "油條", "乾煎魚片", "泥燒糖果"],
+      "日式": ["壽司", "拌麵", "煮物", "日式咖尼", "炸豬排"],
+      "韓式": ["韓式炒麵", "韓式雞塊", "部隊鍋", "豬肉糖醬燒", "辣炒年糖"],
+      "泰式": ["..."] // 可再擴充
+    };
 
-  function recommendByCategory() {
-    const cuisine = document.getElementById("cuisine").value;
-    const options = categoryData[cuisine];
-    const random = options[Math.floor(Math.random() * options.length)];
-    const result = `
-      推薦你吃：「<strong>${random}</strong>」<br>
-      <a href="https://www.google.com/search?q=${encodeURIComponent(random + ' 附近')}" class="link" target="_blank">
-        搜尋附近的「${random}」
-      </a>`;
-    document.getElementById("category-result").innerHTML = result;
-  }
+    function recommendByCategory() {
+      const cuisine = document.getElementById("cuisine").value;
+      const blacklist = filters();
+      const options = categoryData[cuisine] || [];
+      const filtered = options.filter(item => !blacklist.some(b => item.includes(b)));
+      const chosen = filtered[Math.floor(Math.random() * filtered.length)];
+      document.getElementById("category-result").innerHTML = chosen ? `推薦你吃：<strong>${chosen}</strong><br><a class="link" href="https://www.google.com/search?q=${encodeURIComponent(chosen + ' 附近')}" target="_blank">搜尋附近的「${chosen}」</a>` : "找不到符合的餐點，請重新選擇。";
+    }
 
-  const slotDishes = [
-    // 共 100 道餐點（隨機混合）
-    "牛排","義大利麵","拉麵","壽司","紅燒牛肉麵","三杯雞","韓式炸雞","泡菜鍋","月亮蝦餅","咖哩飯",
-    "石鍋拌飯","親子丼","炒米粉","奶油燉飯","焗烤馬鈴薯","起司漢堡","炸豬排","部隊鍋","抹茶蛋糕","芋泥球",
-    "千層蛋糕","珍珠奶茶","鹽酥雞","臭豆腐","大腸麵線","米血","摩斯漢堡","肯德基","麥當勞","漢堡王",
-    "頂呱呱","芒果冰","涼麵","涼拌海帶絲","泰式酸辣湯","綠咖哩","椰汁雞肉飯","蚵仔煎","鍋燒意麵","擔仔麵",
-    "韓式冷麵","明太子炒飯","炸雞塊","起司焗飯","鮭魚丼","章魚燒","豆花","紅豆餅","車輪餅","烤地瓜",
-    "牛肉捲餅","蔥抓餅","雞肉飯","鵝肉飯","雞腿便當","鯖魚定食","和風牛肉鍋","涼拌豆腐","法式吐司","起司三明治",
-    "鮮蝦餛飩湯","滷味拼盤","烏龍麵","貢丸湯","炒飯","炒麵","燒肉丼","薯條","熱狗堡","可麗餅",
-    "鮪魚三明治","日式關東煮","麻辣燙","刈包","麻婆豆腐","紅燒魚","糖醋里肌","椒鹽雞塊","酸菜白肉鍋","韓式豆腐煲",
-    "炒泡麵","鍋貼","蒸餃","小籠包","豆漿油條","杏仁豆腐","涼粉","香辣牛肚","鴨血臭豆腐","豆皮壽司",
-    "泡菜起司鍋","培根蛋堡","肉燥飯","鹹水雞","粽子","客家小炒","螞蟻上樹","炒高麗菜","荷包蛋","叉燒飯"
-  ];
+    const slotDishes = [...Array(100).keys()].map(i => `第${i + 1}道餐點`); // demo: 100道
+    let slotTimer;
+    let isSpinning = false;
 
-  let slotTimer;
-  let isSpinning = false;
+    function startSlot() {
+      if (isSpinning) return;
+      isSpinning = true;
+      const blacklist = filters();
+      slotTimer = setInterval(() => {
+        let dish;
+        do {
+          dish = slotDishes[Math.floor(Math.random() * slotDishes.length)];
+        } while (blacklist.some(b => dish.includes(b)));
+        document.getElementById("slot-box").textContent = dish;
+      }, 80);
+      document.getElementById("slot-result").innerHTML = "";
+    }
 
-  function startSlot() {
-    if (isSpinning) return;
-    isSpinning = true;
-    const box = document.getElementById("slot-box");
-    slotTimer = setInterval(() => {
-      const random = slotDishes[Math.floor(Math.random() * slotDishes.length)];
-      box.textContent = random;
-    }, 80);
-    document.getElementById("slot-result").innerHTML = "";
-  }
-
-  function stopSlot() {
-    if (!isSpinning) return;
-    clearInterval(slotTimer);
-    const box = document.getElementById("slot-box");
-    const chosen = box.textContent;
-    const sound = document.getElementById("ding");
-    sound.play();
-
-    document.getElementById("slot-result").innerHTML = `
-      你抽中了：「<strong>${chosen}</strong>」！<br>
-      <a href="https://www.google.com/search?q=${encodeURIComponent(chosen + ' 附近')}" class="link" target="_blank">
-        搜尋附近的「${chosen}」
-      </a>`;
-    isSpinning = false;
-  }
-</script>
+    function stopSlot() {
+      if (!isSpinning) return;
+      clearInterval(slotTimer);
+      const chosen = document.getElementById("slot-box").textContent;
+      document.getElementById("ding").play();
+      document.getElementById("slot-result").innerHTML = `你抽中了：<strong>${chosen}</strong><br><a class="link" href="https://www.google.com/search?q=${encodeURIComponent(chosen + ' 附近')}" target="_blank">搜尋附近的「${chosen}」</a>`;
+      isSpinning = false;
+    }
+  </script>
 </body>
 </html>
