Update index_fix meal display.html

--- a/index.html
+++ b/index.html
@@ -155,9 +155,17 @@
       document.getElementById("category-result").innerHTML = chosen ? `推薦你吃：<strong>${chosen}</strong><br><a class="link" href="https://www.google.com/search?q=${encodeURIComponent(chosen + ' 附近')}" target="_blank">搜尋附近的「${chosen}」</a>` : "找不到符合的餐點，請重新選擇。";
     }
 
-    const slotDishes = [...Array(100).keys()].map(i => `第${i + 1}道餐點`);
-    let slotTimer;
-    let isSpinning = false;
+   const slotDishes = [
+  "牛排", "義大利麵", "拉麵", "壽司", "紅燒牛肉麵", "三杯雞", "韓式炸雞", "泡菜鍋", "月亮蝦餅", "咖哩飯",
+  "石鍋拌飯", "親子丼", "炒米粉", "奶油燉飯", "焗烤馬鈴薯", "起司漢堡", "炸豬排", "部隊鍋", "抹茶蛋糕", "芋泥球",
+  "千層蛋糕", "珍珠奶茶", "鹽酥雞", "臭豆腐", "大腸麵線", "米血", "摩斯漢堡", "肯德基", "麥當勞", "漢堡王",
+  "頂呱呱", "芒果冰", "涼麵", "涼拌海帶絲", "泰式酸辣湯", "綠咖哩", "椰汁雞肉飯", "蚵仔煎", "鍋燒意麵", "擔仔麵",
+  "韓式冷麵", "明太子炒飯", "炸雞塊", "起司焗飯", "鮭魚丼", "章魚燒", "豆花", "紅豆餅", "車輪餅", "烤地瓜",
+  "牛肉捲餅", "蔥抓餅", "雞肉飯", "鵝肉飯", "雞腿便當", "鯖魚定食", "和風牛肉鍋", "涼拌豆腐", "法式吐司", "起司三明治",
+  "鮮蝦餛飩湯", "滷味拼盤", "烏龍麵", "貢丸湯", "炒飯", "炒麵", "燒肉丼", "薯條", "熱狗堡", "可麗餅",
+  "鮪魚三明治", "日式關東煮", "麻辣燙", "刈包", "麻婆豆腐", "紅燒魚", "糖醋里肌", "椒鹽雞塊", "酸菜白肉鍋", "韓式豆腐煲",
+  "炒泡麵", "鍋貼", "蒸餃", "小籠包", "豆漿油條", "杏仁豆腐", "涼粉", "香辣牛肚", "鴨血臭豆腐", "豆皮壽司",
+  "泡菜起司鍋", "培根蛋堡", "肉燥飯", "鹹水雞", "粽子", "客家小炒", "螞蟻上樹", "炒高麗菜", "荷包蛋", "叉燒飯"
 
     function startSlot() {
       if (isSpinning) return;
