--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
     const filters = () => Array.from(document.querySelectorAll('#filters input:checked')).map(cb => cb.value);
 
     const categoryData = {
-      "中餐": ["宮保雞丁", "紅燒牛肉麵", "三杯雞", "滷肉飯", "炒米粉", "酸菜白肉鍋", "蔥爆牛肉", "紅燒排骨", "番茄炒蛋", "豆鼓鯖魚", "蠔油芥藍", "燒酒雞", "牛肉捲餅"],
-      "西餐": ["牛排", "焗烤馬鈴薯", "義大利麵", "奶油燉飯", "起司漢堡", "番茄海鮮義大利麵", "白醬燻雞義大利麵", "法式燉牛肉", "焗烤海鮮飯", "起司培根馬鈴薯", "蘑菇濃湯", "凱薩沙拉", "迷迭香烤雞腿"],
-      "日式": ["拉麵", "壽司", "咖哩飯", "炸豬排", "親子丼", "天婦羅", "味噌湯", "鰻魚飯", "唐揚雞", "章魚燒", "日式燒肉", "豚骨拉麵", "明太子義大利麵"],
-      "韓式": ["石鍋拌飯", "韓式炸雞", "部隊鍋", "泡菜炒飯", "辣炒年糕", "泡菜鍋", "韓式烤肉", "牛肉海帶湯", "人蔘雞湯", "韓式海鮮煎餅", "冷麵", "辣炒魷魚", "起司年糕"],
-      "泰式": ["打拋豬", "綠咖哩", "月亮蝦餅", "泰式酸辣湯", "椰汁雞肉飯", "泰式涼拌木瓜絲", "泰式打拋雞", "泰式河粉", "泰式炒麵", "泰式檸檬魚", "紅咖哩雞", "泰式炸蝦餅", "蝦醬空心菜"],
-      "甜點": ["珍珠奶茶", "抹茶蛋糕", "芋泥球", "冰淇淋鬆餅", "千層蛋糕", "紅豆餅", "巧克力布朗尼", "奶酪", "提拉米蘇", "焦糖布丁", "可麗露", "草莓塔", "乳酪蛋糕"],
-      "小吃": ["鹽酥雞", "蚵仔煎", "大腸麵線", "米血", "臭豆腐", "肉圓", "甜不辣", "炸豆腐", "刈包", "蔥抓餅", "筒仔米糕", "魯肉飯", "關東煮"],
-      "速食": ["麥當勞", "肯德基", "漢堡王", "摩斯漢堡", "頂呱呱", "達美樂", "必勝客", "拿坡里炸雞", "麥味登", "Subway", "Taco Bell", "Five Guys", "Shake Shack"]
+      "中餐": ["宮保雞丁", "紅燒牛肉麵", "三杯雞", "滷肉飯", "炒米粉"],
+      "西餐": ["牛排", "焗烤馬鈴薯", "義大利麵", "奶油燉飯", "起司漢堡"],
+      "日式": ["拉麵", "壽司", "咖哩飯", "炸豬排", "親子丼"],
+      "韓式": ["石鍋拌飯", "韓式炸雞", "部隊鍋", "泡菜炒飯", "辣炒年糕"],
+      "泰式": ["打拋豬", "綠咖哩", "月亮蝦餅", "泰式酸辣湯", "椰汁雞肉飯"],
+      "甜點": ["珍珠奶茶", "抹茶蛋糕", "芋泥球", "冰淇淋鬆餅", "千層蛋糕"],
+      "小吃": ["鹽酥雞", "蚵仔煎", "大腸麵線", "米血", "臭豆腐"],
+      "速食": ["麥當勞", "肯德基", "漢堡王", "摩斯漢堡", "頂呱呱"]
     };
 
     function recommendByCategory() {
@@ -155,7 +155,7 @@
       document.getElementById("category-result").innerHTML = chosen ? `推薦你吃：<strong>${chosen}</strong><br><a class="link" href="https://www.google.com/search?q=${encodeURIComponent(chosen + ' 附近')}" target="_blank">搜尋附近的「${chosen}」</a>` : "找不到符合的餐點，請重新選擇。";
     }
 
-   const slotDishes = [
+    const slotDishes = [
   "牛排", "義大利麵", "拉麵", "壽司", "紅燒牛肉麵", "三杯雞", "韓式炸雞", "泡菜鍋", "月亮蝦餅", "咖哩飯",
   "石鍋拌飯", "親子丼", "炒米粉", "奶油燉飯", "焗烤馬鈴薯", "起司漢堡", "炸豬排", "部隊鍋", "抹茶蛋糕", "芋泥球",
   "千層蛋糕", "珍珠奶茶", "鹽酥雞", "臭豆腐", "大腸麵線", "米血", "摩斯漢堡", "肯德基", "麥當勞", "漢堡王",
@@ -167,27 +167,30 @@
   "炒泡麵", "鍋貼", "蒸餃", "小籠包", "豆漿油條", "杏仁豆腐", "涼粉", "香辣牛肚", "鴨血臭豆腐", "豆皮壽司",
   "泡菜起司鍋", "培根蛋堡", "肉燥飯", "鹹水雞", "粽子", "客家小炒", "螞蟻上樹", "炒高麗菜", "荷包蛋", "叉燒飯"
 ];
-function startSlot() {
-  if (isSpinning) return;
-  isSpinning = true;
-  const blacklist = filters();
-  const validOptions = slotDishes.filter(dish => !blacklist.some(b => dish.includes(b)));
+    let slotTimer;
+    let isSpinning = false;
 
-  if (validOptions.length === 0) {
-    document.getElementById("slot-box").textContent = "😵 沒有可選項目";
-    document.getElementById("slot-result").innerHTML = "請取消一些『不想吃的』再試試～";
-    isSpinning = false;
-    return;
-  }
+    function startSlot() {
+      if (isSpinning) return;
+      isSpinning = true;
+      const blacklist = filters();
+      const validOptions = slotDishes.filter(dish => !blacklist.some(b => dish.includes(b)));
 
-  slotTimer = setInterval(() => {
-    const random = validOptions[Math.floor(Math.random() * validOptions.length)];
-    document.getElementById("slot-box").textContent = random;
-  }, 80);
+      if (validOptions.length === 0) {
+        document.getElementById("slot-box").textContent = "😵 沒有可選項目";
+        document.getElementById("slot-result").innerHTML = "請取消一些『不想吃的』再試試～";
+        isSpinning = false;
+        return;
+      }
 
-  document.getElementById("slot-result").innerHTML = "";
-}
-
+      slotTimer = setInterval(() => {() => {
+        let dish;
+        const random = validOptions[Math.floor(Math.random() * validOptions.length)];
+        document.getElementById("slot-box").textContent = random;
+        document.getElementById("slot-box").textContent = dish;
+      }, 80);
+      document.getElementById("slot-result").innerHTML = "";
+    }
 
     function stopSlot() {
       if (!isSpinning) return;
